# coin-forge

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
coinforge/: __init__.py  config.py  constants.py  factory.py
coinforge/api/: __init__.py  app.py
coinforge/api/static/: dashboard.html
coinforge/backtest/: __init__.py  compare.py  data.py  engine.py  metrics.py
coinforge/bridge/: __init__.py  base.py  mock.py  upbit_rest.py
coinforge/cli/: __init__.py  api.py  backtest.py  trader.py
coinforge/domain/: __init__.py  candle.py  indicators.py  position.py  trade.py
coinforge/engine/: __init__.py  orchestrator.py  scheduler.py
coinforge/exchange/: __init__.py  base.py  mock.py  upbit.py
coinforge/indicators/: __init__.py  engine.py
coinforge/notify/: __init__.py  base.py  event.py  mock.py  multi.py  pushover.py  telegram.py
coinforge/paper/: __init__.py  engine.py
coinforge/risk/: __init__.py  manager.py
coinforge/storage/: __init__.py  base.py  memory.py  mongo.py
coinforge/strategy/: __init__.py  context.py  defense.py  diagnostics.py  entry.py  exit.py  params.py  pullback.py
docs/: CHECKLIST.md  INDEX.md  PLAN.md
scripts/: coin-chart.py  get_backdata.py
tests/: fixtures.py  test_backtest.py  test_bridge.py  test_compare.py  test_diagnostics.py  test_engine.py  test_exchange.py  test_indicators.py  test_paper.py  test_risk.py  test_rsi_macd.py  test_scheduler.py  test_strategy.py
